--- a/прив/Правила/_franchises.yml
+++ b/прив/Правила/_franchises.yml
@@ -41,7 +41,7 @@
   metadata: &4
     title_ru: Токийский гуль
     title_en: Tokyo Ghoul
-    image: "/assets/achievements/anime/franchise/tokyo_ghoul.jpg"
+    image: "/https://media.tenor.com/-reKLlPeLMoAAAAC/tokyo-ghoul.gif"
     topic_id: 247360
 - neko_id: tokyo_ghoul
   level: 0
